fix(mobile): show flag indicator inline with subject on mobile view
Fixes: #712 - Message flags were hidden on mobile portrait view due to
sm-hidden class. Added inline flag icon inside subject cell that displays
only on mobile via sm-only class and container query.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -185,7 +185,11 @@
         .flagged-cell {
             width: 2%;
         }
-        
+
+        .sm-only {
+            display: none;
+        }
+
         .preview {
             display: block;
             height: 1lh;
@@ -240,6 +244,19 @@
                 margin-left: 8px;
                 display: flex;
                 flex-flow: row wrap;
+            }
+
+            .sm-only {
+                display: inline-block;
+            }
+
+            .flag-inline {
+                font-size: 1em;
+                width: 1em;
+                height: 1em;
+                vertical-align: text-bottom;
+                margin-right: 0.25em;
+                color: var(--rmm-warn-color);
             }
         }
     }
